--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "@types/express": "^5.0.5",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.10.0",
+    "@types/pg": "^8.15.6",
     "@types/swagger-ui-express": "^4.1.8",
     "nodemon": "^3.1.10",
     "ts-node-dev": "^2.0.0",
