--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.0",
+    "lucide-react": "0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "lucide-react": "0.548.0",
-    "@fortawesome/react-fontawesome": "3.1.0",
-    "@fortawesome/free-solid-svg-icons": "7.1.0",
-    "@fortawesome/fontawesome-svg-core": "7.1.0"
+    "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
