package.json change

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
     "build": "tsc",
+    "postbuild": "cp openapi.yaml dist/openapi.yaml",
     "start": "node dist/server.js"
   },
   "keywords": [],
