--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
     "build": "tsc && prisma generate",
-    "postbuild": "cp openapi.yaml dist/openapi.yaml",
+    "postbuild": "cp -r openapi dist/openapi",
     "start": "node dist/server.js"
   },
   "keywords": [],
