--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,10 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "js-yaml": "^4.1.0",
+    "openai": "^6.9.1",
     "pg": "^8.16.3",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
