--- a/backend/openapi/paths/comments/getById.yaml
+++ b/backend/openapi/paths/comments/getById.yaml
@@ -1,26 +1,25 @@
 get:
-  summary: Get comments for a dataset
-  description: Retrieves all comments associated with a specific dataset ID.
+  summary: Get a comment by ID
+  description: Retrieves a single comment by its unique ID.
   tags:
-    - Datasets
+    - Comments
   parameters:
     - name: id
       in: path
       required: true
-      description: The ID of the dataset.
+      description: The ID of the comment to retrieve.
       schema:
-        type: string
+        type: integer
+        format: int64
   responses:
     "200":
-      description: A list of comment messages for the dataset.
+      description: The requested comment.
       content:
         application/json:
           schema:
-            type: array
-            items:
-              $ref: "../../components/schemas/Komentar.yaml"
+            $ref: "../../components/schemas/Komentar.yaml"
     "404":
-      description: Dataset not found.
+      description: Comment not found.
       content:
         application/json:
           schema:
