--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "lucide-react": "0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "7.9.5"
+    "react-router-dom": "7.9.5",
+    "axios":"1.13.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
