--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^12.1.0",
     "@prisma/client": "^6.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "js-yaml": "^4.1.0",
@@ -24,6 +25,7 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^24.10.1",
