--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,9 @@
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
     "build": "tsc && prisma generate",
     "postbuild": "cp -r openapi dist/openapi",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test:mbz": "ts-node test/mbz/test-mbz.ts",
+    "test:mbz:generate": "ts-node test/mbz/create-test-mbz.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,22 +17,35 @@
   "dependencies": {
     "@apidevtools/swagger-parser": "^12.1.0",
     "@prisma/client": "^6.19.0",
+    "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "html-entities": "^2.6.0",
     "js-yaml": "^4.1.0",
+    "multer": "^2.0.2",
     "openai": "^6.9.1",
     "pg": "^8.16.3",
     "swagger-ui-express": "^5.0.1",
+    "tar": "^7.5.2",
+    "xml2js": "^0.6.2",
     "zod": "^4.1.13"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.7",
+    "@types/archiver": "^7.0.0",
+    "@types/cheerio": "^1.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
     "@types/js-yaml": "^4.0.9",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.10.1",
     "@types/pg": "^8.15.6",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/xml2js": "^0.4.14",
     "nodemon": "^3.1.10",
     "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0",
