--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,17 +16,17 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.0",
     "@mui/material": "^7.3.5",
+    "axios": "1.13.2",
     "lucide-react": "0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "7.9.5",
-    "axios":"1.13.2"
+    "react-router-dom": "7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/node": "^24.6.0",
-    "@types/react": "^19.1.16",
-    "@types/react-dom": "^19.1.9",
+    "@types/node": "^24.10.4",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-plugin-react-hooks": "^5.2.0",
@@ -34,6 +34,6 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.1.7"
+    "vite": "^7.3.0"
   }
 }
