--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "server.ts",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only server.ts",
-    "build": "tsc && prisma generate",
+    "build": "prisma generate && tsc",
     "postbuild": "cp -r openapi dist/openapi",
     "start": "node dist/server.js",
     "test:mbz": "ts-node test/mbz/test-mbz.ts",
