--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,3 +16,17 @@ services:
     depends_on:
       - backend
     restart: unless-stopped
+
+  db:
+    image: postgres:17
+    ports: 
+      - "5433:5432"
+    env_file:
+      - ./backend/.env       
+    volumes:
+      - ./database/schema.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+volumes:
+  postgres_data:
