--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "80:80"
     depends_on:
       - backend
+    env_file:
+      - ./frontend/.env
     restart: unless-stopped
 
   db:
